[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/singletons/SoundController/SoundController.gd" type="Script" id=1]
[ext_resource path="res://assets/music/desert_wind.ogg" type="AudioStream" id=8]

[node name="SoundController" type="Node"]
script = ExtResource( 1 )

[node name="Music" type="Node" parent="."]

[node name="Track1" type="AudioStreamPlayer2D" parent="Music"]
bus = "Music"

[node name="Track2" type="AudioStreamPlayer2D" parent="Music"]
bus = "Music"

[node name="Ambiance" type="Node" parent="."]

[node name="Ambiance" type="AudioStreamPlayer2D" parent="Ambiance"]
stream = ExtResource( 8 )

[node name="SoundEffects" type="Node" parent="."]

[node name="Sound1" type="AudioStreamPlayer2D" parent="SoundEffects"]

[node name="Sound2" type="AudioStreamPlayer2D" parent="SoundEffects"]

[node name="Sound3" type="AudioStreamPlayer2D" parent="SoundEffects"]

[node name="Sound4" type="AudioStreamPlayer2D" parent="SoundEffects"]

[node name="Sound5" type="AudioStreamPlayer2D" parent="SoundEffects"]
